@@ -340,6 +340,7 @@ section:Options[option-index]
 ||'popups'|| Where to show requested popup windows +
 ||'preload'|| Speed up first time history/bookmark completion +
 ||'previouspattern'|| Patterns to use when guessing the \'previous' page in a document sequence +
+||'repeat'|| Set the playback repeat mode +
 ||'runtimepath'|| List of directories searched for runtime files +
 ||'scroll'|| Number of lines to scroll with [m]<C-u>[m] and [m]<C-d>[m] commands +
 ||'shell'|| Shell to use for executing [c]:![c] and [c]:run[c] commands +
@@ -347,6 +348,7 @@ section:Options[option-index]
 ||'showmode'|| Show the current mode in the command line +
 ||'showstatuslinks'|| Show the destination of the link under the cursor in the status bar +
 ||'showtabline'|| Control when to show the tab bar of opened web pages +
+||'shuffle'|| Play tracks in shuffled order +
 ||'smartcase'|| Override the 'ignorecase' option if the pattern contains uppercase characters +
 ||'suggestengines'|| Engine Alias which has a feature of suggest +
 ||'titlestring'|| Change the title of the window +
