@@ -9,6 +9,7 @@
     * :dialog {subscribe|newsmartplaylist}
     * add :displaypane and :dpclose
     * rename :filter to :queue and :Filter to :filter
+    * add 'repeat' and 'shuffle'
 
 2009-03-28:
     * version 0.1
